-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
When executed with -XX:-UseCompressedClassPointers, test ValueFieldInheritanceTest.java causes the VM to crash because of the following assert:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/open/src/hotspot/share/classfile/fieldLayoutBuilder.cpp:1019), pid=3025213, tid=3025214
# assert(_layout->start()->next_block()->kind() == LayoutRawBlock::EMPTY) failed: Unexpected
#
# JRE version: Java(TM) SE Runtime Environment (23.0) (fastdebug build 23-lworld5ea-2024-07-01-1340491.frederic.parain.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-lworld5ea-2024-07-01-1340491.frederic.parain.valhalla, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xc3c1f8] FieldLayoutBuilder::compute_inline_class_layout()+0x818
#
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/open/src/hotspot/share/classfile/fieldLayoutBuilder.cpp:1019), pid=3025213, tid=3025214
# assert(_layout->start()->next_block()->kind() == LayoutRawBlock::EMPTY) failed: Unexpected
#
# JRE version: Java(TM) SE Runtime Environment (23.0) (fastdebug build 23-lworld5ea-2024-07-01-1340491.frederic.parain.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-lworld5ea-2024-07-01-1340491.frederic.parain.valhalla, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xc3c1f8] FieldLayoutBuilder::compute_inline_class_layout()+0x818
#
- relates to
-
JDK-8374554 [lworld] Field layout assert with UseCompactObjectHeaders
-
- Resolved
-
- links to
-
Commit(lworld)
openjdk/valhalla/98c1ed5d
-
Review(lworld)
openjdk/valhalla/1159