8335439: [lworld] ValueFieldInheritanceTest.java fails with -XX:-UseCompressedClassPointers